--- a/Archivos/Archivos.cbp
+++ b/Archivos/Archivos.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SDL2Testground" />
+		<Option title="Archivos" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/SDL2Testground" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Archivos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/SDL2Testground" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Archivos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,12 +32,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Enemigo.cpp" />
-		<Unit filename="Enemigo.h" />
-		<Unit filename="Jugador.cpp" />
-		<Unit filename="Jugador.h" />
-		<Unit filename="Personaje.cpp" />
-		<Unit filename="Personaje.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
